# wattercrawl-plugin

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
src/watercrawl_plugin/: __init__.py  base.py  pipeline.py  utils.py
